--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button class="button headerButton">LOG IN</button>
     </div>
     <div class="article">
-      <h2>Space Ripples Reveal Big Bang’s Smoking Gun</h2>
+      <h2 class="articleHeader">Space Ripples Reveal Big Bang’s Smoking Gun</h2>
       <img class="image1" src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-superJumbo.jpg?quality=90&auto=webp" alt="Alan Guth">
       <p>Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.Credit...Rick Friedman for The New York Times</p>
       <p class="centerParagraph">CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.
